# playlist-buddy

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PROJECT_SETUP_SUMMARY.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  pyproject.toml  requirements.txt  run.py  tautulli_powered_playlist_builder_high_level_vision.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: __init__.py  main.py
src/api/: __init__.py  plex_client.py  tautulli_client.py  tmdb_client.py
src/models/: __init__.py  media.py
src/ui/: connection_dialog.py  library_tree.py  main_window.py  playlist_builder.py
src/utils/: config.py  credential_store.py  image_cache.py
tests/: test_api_clients.py  test_credential_store.py
